--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Netflix-like website for watching movies",
   "main": "index.js",
   "scripts": {
-    "build": "echo \"Error: no test specified\" && exit 1"
+    "build": "tailwindcss -i ./src/input.css -o ./src/output.css --watch"
   },
   "keywords": [],
   "author": "",
